@@ -7,6 +7,10 @@ Samu:
         get_open_orders():
             Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for open orders, 
             possibility to display raw request response, or display simple list of all open orders.
+        
+        get_executions():
+            Added possibility to display html pandas dataframe for jupyter notebooks with relevant fields for executed orders, 
+            possibility to display raw request response, or display simple list of all open orders.
 
 
 
